# muclaw

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  coding_conventions.md  conan_profile  conanfile.txt  docker-compose.yml  entrypoint.sh  old_local_embedder.cpp  pyproject.toml  rebuild.sh  requirements.txt
.claude/skills/: developer.md  pm-assistant.md  qa-dev.md  team-manager.md
assets/: db_schema.sql
docs/: dev-team-agent-swarm-plan.md
include/: asio_curl.hpp  assistant.hpp  database.hpp  llm.hpp  local_embedder.hpp  logger.hpp  telegram.hpp  vector_db.hpp
schemas/: email.sql
src/: asio_curl.cpp  assistant.cpp  database.cpp  llm.cpp  local_embedder.cpp  main.cpp  telegram.cpp  vector_db.cpp
src/proton_email/: __main__.py  cli.py  db.py  email_client.py
src/proton_email/agent_swarm/: __init__.py  github_state.py  orchestrator.py
src/proton_email/telegram/: __init__.py  bot.py
tests/: test_asio_curl.cpp  test_database.cpp  test_local_embedder.cpp  test_vector_db.cpp
